--- a/style.css
+++ b/style.css
@@ -22,8 +22,27 @@ h1 {
 .logo {
     width: 50px;
     height: 50px;
-   
+}
 
-    
+.contaires  {
+    margin-top: 30px;
+    padding: 0 60px o 60px;
+}
+
+.post {
+    background-color: #282c34;
+    margin-bottom: 15px;
+    padding: 5px 20px 5px 20px;
+    border-radius: 12px;
+
+}
+.post h4 {
+    color: #98c379;
+
+}
+}
+.post span {
+    color: #61afef;
+
 }
 
